# experiments

./: README.md
.github/workflow/: pr-auto-approve.taml
bsm/: Cargo.toml  hello.bsm
bsm/src/: main.rs
gcore/: Cargo.toml
gcore/src/: main.rs
login_jwt/backend/: .gitignore  README.md  manage.py  requirements.txt
login_jwt/backend/loginjwt/: apps.py  views.py
login_jwt/backend/logintest/: asgi.py  settings.py  urls.py  wsgi.py
login_jwt/frontend/: package.json
login_jwt/frontend/src/: App.tsx  LoginForm.tsx  LoginPage.tsx  LoginSucceededPage.tsx  config.ts  index.tsx  setupProxy.js
lvd/: Cargo.toml
lvd/src/: main.rs
pp/: main.py  test.py
python_docx/: .gitignore  README.md  docx_exp.py  requirements.txt  test_doc.docx
rspyast/: Cargo.toml
rspyast/src/: main.rs
rspyast/test_files/: test_simple.py
task/: Cargo.toml
task/src/: lib.rs  task.rs
timestamp2delta/rs/: Cargo.toml
timestamp2delta/rs/src/: main.rs
