[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"

[dependencies.windows]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_System_Ole",
  "Win32_System_Memory",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_Globalization",
]
